# meteole

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  licences.md  pyproject.toml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd-mkdocs.yml  ci-cd.yml
docs/: mkdocs.yaml
docs/pages/: coverage_parameters.md  home.md  how_to.md  index.html  installation.md  output.md  why.md
docs/pages/assets/css/: mkdocs_extra.css  style.css
docs/pages/assets/js/tarteaucitron/: README.md  tarteaucitron.js  tarteaucitron.services.js
docs/pages/assets/js/tarteaucitron/lang/: tarteaucitron.cs.js  tarteaucitron.de.js  tarteaucitron.en.js  tarteaucitron.es.js  tarteaucitron.fr.js  tarteaucitron.it.js  tarteaucitron.pl.js  tarteaucitron.pt.js  tarteaucitron.ru.js
src/meteole/: __init__.py  _arome.py  _arome_ensemble.py  _arome_instantane.py  _arpege.py  _arpege_ensemble.py  _dpclim.py  _piaf.py  _vigilance.py  arpege.py  client.py  clients.py  climat.py  const.py  errors.py  forecast.py  raster.py  vigilance.py
tests/: test_core.py  test_forecast.py  test_forecasts.py  test_vigilance.py
tutorial/: Fetch_AROME_forecasts.ipynb  Fetch_PIAF_forecasts.ipynb  Fetch_forecast_for_multiple_indicators.ipynb  Fetch_forecasts.ipynb  Fetch_forecasts_ensemble.ipynb  Get_observations.ipynb  Get_vigilance.ipynb  access_vigilance_bulletin.ipynb  access_viligance_bulletin.ipynb  arome.ipynb  arpege.ipynb  vigilance.ipynb
