[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "meteole"
version = "0.2.0"
description = "Wrapper around Méteo-France Public API"
readme = "README.md"
authors = [
    {name = "Squad Geodatahub / Tribu IODA"},
]

classifiers = [  #
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    # "Programming Language :: Python :: 3.12", no wheels 3.12 for dependency ecmwflibs
]

dependencies = [
    "pandas>=2.0.0",
    "ecmwflibs>=0.6.3",
    "cfgrib>=0.0.11.0",
    "requests>=2.31.0",
    "xarray>=2024.5.0",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
test = ["pytest", "coverage"]
doc = ["mkdocs-material", "mkdocstrings[python]", "jinja2==3.0.3"]
mypy = ["mypy"]
ruff = ["ruff"]
dev = ["mypy", "pre-commit", "ruff"]
all = ["meteole[test,dev,doc,mypy,ruff]"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
exclude = ["tests"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
exclude = ["tests"]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
ignore = ["E501", "D2", "D3", "D4", "D104", "D100", "D106", "S311"]
extend-select = [
    "UP",  # pyupgrade"
    "S", # flake8-bandit,
    "B", # flake8-bugbear
    "I", # isort
    "D", # pydocstyle
    "NPY", # NumPy-specific rules
]
